Rewrite image building, add readme, include patching of Spark source
Patch for issue SPRK-27812, breaking spark on more recent versions of Kubernetes.
This patch can most likely be removed on release of Spark 2.4.5 in January.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Build
-        run: ./build.sh
+        run: |
+          docker build -t spark-builder:latest -f Dockerfile.build .
+          docker run -tv "$(pwd)/cache:/mnt" spark-builder:latest
+
+          ./make-image.sh
