Push spark images

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Build
+      - name: Pull latest Spark image builder
+        run: docker pull ioben/spark-builder:latest || true
+      - name: Build spark image builder
         run: |
-          docker build -t spark-builder:latest -f Dockerfile.build .
-          docker run -tv "$(pwd)/cache:/mnt" spark-builder:latest
-
-          ./make-image.sh
+          docker build -t ioben/spark-builder:latest -f Dockerfile.build .
+      - name: Publish spark image builder
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker push ioben/spark-builder:latest
+          docker logout
+      - name: Build Spark from source
+        run: docker run -tv "$(pwd)/cache:/mnt" ioben/spark-builder:latest
+      - name: Build Spark docker image
+        run: ./make-image.sh -r ioben/spark
+      - name: Push built spark image
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker push ioben/spark:latest
+          docker logout
