--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -12,6 +12,9 @@ RUN apt-get update && \
 RUN Rscript -e "install.packages(c('knitr', 'rmarkdown', 'devtools', 'e1071', 'survival'), repos='https://cloud.r-project.org/')" \
     Rscript -e "devtools::install_version('testthat', version = '1.0.2', repos='https://cloud.r-project.org/')"
 
+RUN useradd -M runner
+USER runner
+
 RUN git clone https://github.com/apache/spark && \
     cd spark
 
